testFixfourth